Add basic HTML structure for game

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <script src="assets/js/script.js" defer></script>
     <title>Rock paper scissors lizard spock game</title>
   </head>
-  <body></body>
+  <body>
+    <header>title</header>
+    <main>
+      <div>selection of emoji icon</div>
+      <div>scores</div>
+      <div>total scores</div>
+      <div>modal and overlay</div>
+    </main>
+    <footer>credits and github link</footer>
+  </body>
 </html>
