Add better clarity for rules in HTML

--- a/index.html
+++ b/index.html
@@ -53,13 +53,26 @@
             occurring. The winner is the one who defeats most the others. In a
             tie, the process is repeated until a winner is found.
           </p>
-          <p class="modal-content" data-modal-content>
-            Rock beats scissors and lizard but loses to paper and spock. <br />
-            Paper beats rock and spock but loses to scissors and lizard. <br />
-            Scissors beats paper and lizard but loses to spock and rock. <br />
-            Lizard beats spock and paper but loses to rock and scissors. <br />
-            Spock beats rock and scissors but loses to paper and lizard.
-          </p>
+          <ul>
+            <li>
+              ✊ Rock beats scissors and lizard but loses to paper and spock.
+            </li>
+            <li>
+              🖐 Rock beats scissors and lizard but loses to paper and spock.
+            </li>
+            <li>
+              ✌️ Paper beats rock and spock but loses to scissors and lizard.
+            </li>
+            <li>
+              Scissors beats paper and lizard but loses to spock and rock.
+            </li>
+            <li>
+              🤏 Lizard beats spock and paper but loses to rock and scissors.
+            </li>
+            <li>
+              🖖 Spock beats rock and scissors but loses to paper and lizard.
+            </li>
+          </ul>
           <p class="modal-content" data-modal-content>
             This is all illustrated in the diagram.
           </p>
@@ -104,3 +117,5 @@
     ></script>
   </body>
 </html>
+
+
