Correct mistake on rules

--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
               ✊ Rock beats scissors and lizard but loses to paper and spock.
             </li>
             <li>
-              🖐 Rock beats scissors and lizard but loses to paper and spock.
+              🖐 Paper beats rock and spock but loses to scissors and lizard.
             </li>
             <li>
-              ✌️ Paper beats rock and spock but loses to scissors and lizard.
-            </li>
-            <li>
-              Scissors beats paper and lizard but loses to spock and rock.
+              ✌️ Scissors beats paper and lizard but loses to spock and rock.
             </li>
             <li>
               🤏 Lizard beats spock and paper but loses to rock and scissors.
