Add styles to the game icons

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p class="modal-content" data-modal-content>
             In this particular application, there will only be two players - the
             user and the computer. There will be a total of 9 rounds per game
-            for each win which means that the first player to win 5 round will
+            for each win which means that the first player to win 5 rounds will
             win a game.
           </p>
           <button class="modal-btn" data-modal-btn>Play game</button>
