Remove unnecessary prefix from button class names

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="bold">select an icon</span> of your choice and the
           computer will select also randomly against you.
         </p>
-        <button class="modal-btn" data-modal-btn>Play game</button>
+        <button class="btn" data-modal-btn>Play game</button>
       </div>
       <div class="end-game-modal" data-modal>
         <h2 data-end-game-message></h2>
@@ -84,8 +84,8 @@
           Total losses:
           <span class="score loss" data-computer-wins>0</span>
         </div>
-        <button class="modal-btn" data-modal-btn>See rules</button>
-        <button class="modal-btn" data-modal-btn>Play again</button>
+        <button class="btn" data-modal-btn>See rules</button>
+        <button class="btn" data-modal-btn>Play again</button>
       </div>
       <div class="overlay" data-overlay></div>
     </main>
