--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
         <!-- Modals -->
-      <div class="start-game-modal" data-modal>
+      <div class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
         <p>
           The game is an extension on top of the original game - Rock Paper
@@ -72,9 +72,9 @@
           <span class="bold">select an icon</span> of your choice and the
           computer will select also randomly against you.
         </p>
-        <button class="btn" data-modal-btn>Play game</button>
+        <button class="btn" data-play-btn>Play game</button>
       </div>
-      <div class="end-game-modal" data-modal>
+      <div class="end-game-modal">
         <h2 data-end-game-message></h2>
         <div>
           Total wins:
@@ -85,9 +85,9 @@
           <span class="score loss" data-computer-wins>0</span>
         </div>
         <button class="btn" data-modal-btn>See rules</button>
-        <button class="btn" data-modal-btn>Play again</button>
+        <button class="btn" data-play-btn>Play again</button>
       </div>
-      <div class="overlay" data-overlay></div>
+      <div class="overlay open" data-overlay></div>
     </main>
     <footer>
       <p>
