Add buttons to open modals with styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Rock paper scissors lizard spock game</title>
   </head>
   <body>
+    <div class="btn-container">
+      <button class="btn--dark">See rules</button>
+      <button class="btn--dark">Check score</button>
+    </div>
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
     <main>
       <div class="selections">
@@ -28,7 +32,8 @@
           <span class="score loss" data-computer-score>0</span>
         </div>
       </div>
-        <!-- Modals -->
+
+      <!-- Modals -->
       <div class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
         <p>
