--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="btn-container">
-      <button class="btn--dark">See rules</button>
+      <button class="btn--dark" data-rules-btn>See rules</button>
       <button class="btn--dark">Check score</button>
     </div>
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
@@ -89,7 +89,7 @@
           Total losses:
           <span class="score loss" data-computer-wins>0</span>
         </div>
-        <button class="btn" data-modal-btn>See rules</button>
+        <button class="btn" data-rules-btn>See rules</button>
         <button class="btn" data-play-btn>Play again</button>
       </div>
       <div class="overlay open" data-overlay></div>
