Add JS code for player selection vs computer selection

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <button class="selection" data-selection="rock">✊</button>
         <button class="selection" data-selection="paper">🖐</button>
         <button class="selection" data-selection="scissors">✌️</button>
-        <button class="selection" data-selection="scissors">🤏</button>
-        <button class="selection" data-selection="scissors">🖖</button>
+        <button class="selection" data-selection="lizard">🤏</button>
+        <button class="selection" data-selection="spock">🖖</button>
       </div>
       <div class="scores">
         <div>
