--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title>Rock paper scissors lizard spock game</title>
   </head>
   <body>
-    <div class="btn-container">
-      <button class="btn--dark" data-rules-btn>See rules</button>
-      <button class="btn--dark" data-scores-btn>Check score</button>
+    <div class="btns">
+      <button class="btn--reset" data-reset-btn>Reset games</button>
+      <div class="btn-container">
+        <button class="btn--dark" data-rules-btn>See rules</button>
+        <button class="btn--dark" data-scores-btn>Check score</button>
+      </div>
     </div>
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
     <main>
