Add media queries to make rules modal responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
         <div class="rules">
-          <ul>
+          <ul class="rules-list">
             <li>
               <span class="icon">✊</span> Rock beats scissors and lizard but loses to paper and spock.
             </li>
