Add instruction on how to play

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <!-- Modals -->
       <div class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
+        <p>In order to play just click the icon!</p>
         <div class="rules">
           <ul class="rules-list">
             <li>
