Rename menu buttons for consistency

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="btns">
-      <button class="btn--reset" data-reset-btn>Reset games</button>
+      <button class="btn--reset" data-reset-btn>Reset</button>
       <div class="btn-container">
         <button class="btn--dark" data-rules-btn>See rules</button>
-        <button class="btn--dark" data-scores-btn>Check score</button>
+        <button class="btn--dark" data-scores-btn>Wins & losses</button>
       </div>
     </div>
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
