Add meta tags to HTML for description and keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Enjoy the fun and excitement of the Rock Paper Scissors Lizard 
+     Spock guessing game online! Test your luck and intuition as you challenge the computer in this 
+     modern twist on a classic hand game. Make your choices, see who wins, and experience the thrill 
+     of chance.">
+    <meta name="keywords" content="Rock Paper Scissors Lizard Spock, guessing game, online, hand game, 
+    challenge, computer opponent, choices, wins, luck, intuition, classic, modern twist, play, chance.">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/script.js" defer></script>
     <title>Rock paper scissors lizard spock game</title>
