--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <title>Rock paper scissors lizard spock game</title>
   </head>
   <body>
+    <!-- Sound effect link -->
     <audio data-sound>
       <source src="assets/sounds/light.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
+    <!-- Navbar buttons -->
     <nav class="btns">
       <button class="btn--reset sound" data-reset-btn>Reset</button>
       <div class="btn-container">
@@ -26,6 +28,7 @@
         <button class="btn--dark sound" data-scores-btn>Wins & losses</button>
       </div>
     </nav>
+    <!-- Main game UI -->
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
     <main>
       <section class="selections">
@@ -46,7 +49,7 @@
         </div>
       </section>
 
-      <!-- Modals -->
+      <!-- Rules modal -->
       <section class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
         <p>In order to play just click the icon!</p>
@@ -76,6 +79,7 @@
         </div>
         <button class="btn sound" data-play-btn>Play game</button>
       </section>
+      <!-- Scores modal -->
       <section class="game-scores-modal" data-scores-modal>
         <h2 data-end-game-message></h2>
         <div class="game-scores">
@@ -90,8 +94,10 @@
         </div>
         <button class="btn sound" data-play-btn>Continue</button>
       </section>
+      <!-- Overlay -->
       <div class="overlay open" data-overlay></div>
     </main>
+    <!-- Credits and github link -->
     <footer>
       <p>
         &copy; Rock Paper Scissors Lizard Spock game 2023 created by Sasan
