Add clearer instructions on the rules modal with the appropriate media queries

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
       <!-- Rules modal -->
       <section class="start-game-modal open" data-modal>
         <h2>How it works (rules)</h2>
-        <p>In order to play just click the icon!</p>
         <div class="rules">
           <ul class="rules-list">
             <li>
@@ -77,6 +76,8 @@
             alt="Rock-paper-lizard-Spock game rules diagram"
           />
         </div>
+        <p>The winner of a game is the first to secure 5 rounds.</p>
+        <p>In order to play just click the button below then a yellow icon!</p>
         <button class="btn sound" data-play-btn>Play game</button>
       </section>
       <!-- Scores modal -->
