--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             alt="Rock-paper-lizard-Spock game rules diagram"
           />
         </div>
+        <button class="sound-btn" data-volume-toggle>
+          <i class="fa-solid fa-volume-high"></i>
+        </button>
         <p>The winner of a game is the first to secure 5 rounds.</p>
         <p>In order to play just click the button below then a yellow icon!</p>
         <button class="btn sound" data-play-btn>Play game</button>
