Move sound toggler to main UI and adjust media queries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <div class="btn-container">
         <button class="btn--dark sound" data-rules-btn>See rules</button>
         <button class="btn--dark sound" data-scores-btn>Wins & losses</button>
+        <button class="sound-btn" data-volume-toggle>
+          <i class="fa-solid fa-volume-high"></i>
+        </button>
       </div>
     </nav>
     <!-- Main game UI -->
@@ -76,10 +79,7 @@
             alt="Rock-paper-lizard-Spock game rules diagram"
           />
         </div>
-        <button class="sound-btn" data-volume-toggle>
-          <i class="fa-solid fa-volume-high"></i>
-        </button>
-        <p>The winner of a game is the first to secure 5 rounds.</p>
+        <p>The winner of a game is the first to win 5 rounds.</p>
         <p>In order to play just click the button below then a yellow icon!</p>
         <button class="btn sound" data-play-btn>Play game</button>
       </section>
