Adjust styles for modal

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
             alt="Rock-paper-lizard-Spock game rules diagram"
           />
         </div>
-        <p>The winner of a game is the first to win 5 rounds.</p>
-        <p>In order to play just click the button below then a yellow icon!</p>
+        <div class="rules-text">
+          <p>The winner of a game is the first to win 5 rounds.</p>
+          <p>In order to play just click the button below then a yellow icon!</p>
+        </div>
         <button class="btn sound" data-play-btn>Play game</button>
       </section>
       <!-- Scores modal -->
