Add aria-labels to buttons

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </audio>
     <!-- Navbar buttons -->
     <nav class="btns">
-      <button class="btn--reset sound" data-reset-btn>Reset</button>
+      <button class="btn--reset aria-label="Reset Button" sound" data-reset-btn>Reset</button>
       <div class="btn-container">
-        <button class="btn--dark sound" data-rules-btn>See rules</button>
-        <button class="btn--dark sound" data-scores-btn>Wins & losses</button>
-        <button class="sound-btn" data-volume-toggle>
+        <button class="btn--dark sound" aria-label="Dark Theme Button" data-rules-btn>See rules</button>
+        <button class="btn--dark sound" aria-label="Dark Theme Button" data-scores-btn>Wins & losses</button>
+        <button class="btn--sound" aria-label="Sound Button" data-volume-toggle>
           <i class="fa-solid fa-volume-high"></i>
         </button>
       </div>
