Fix syntax error in HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </audio>
     <!-- Navbar buttons -->
     <nav class="btns">
-      <button class="btn--reset aria-label="Reset Button" sound" data-reset-btn>Reset</button>
+      <button class="btn--reset sound" aria-label="Reset Button" data-reset-btn>Reset</button>
       <div class="btn-container">
         <button class="btn--dark sound" aria-label="Dark Theme Button" data-rules-btn>See rules</button>
         <button class="btn--dark sound" aria-label="Dark Theme Button" data-scores-btn>Wins & losses</button>
