Adjust game to start with sound muted

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="btn--dark sound" aria-label="Dark Theme Button" data-rules-btn>See rules</button>
         <button class="btn--dark sound" aria-label="Dark Theme Button" data-scores-btn>Wins & losses</button>
         <button class="btn--sound" aria-label="Sound Button" data-volume-toggle>
-          <i class="fa-solid fa-volume-high"></i>
+          <i class="fa-solid fa-volume-xmark"></i>
         </button>
       </div>
     </nav>
