Remove unused classes from HTML

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </head>
   <body>
     <nav class="btns">
-      <button class="btn--reset sound" aria-label="Reset Button" data-reset-btn>Reset</button>
+      <button class="btn--reset" aria-label="Reset Button" data-reset-btn>Reset</button>
       <div class="btn-container">
-        <button class="btn--dark sound" aria-label="Dark Theme Button" data-rules-btn>See rules</button>
-        <button class="btn--dark sound" aria-label="Dark Theme Button" data-scores-btn>Wins & losses</button>
+        <button class="btn--dark" aria-label="Dark Theme Button" data-rules-btn>See rules</button>
+        <button class="btn--dark" aria-label="Dark Theme Button" data-scores-btn>Wins & losses</button>
       </div>
     </nav>
     <header><h1>Rock Paper Scissors Lizard Spock game</h1></header>
@@ -77,7 +77,7 @@
           <p>The winner of a game is the first to win 5 rounds.</p>
           <p>In order to play just click the button below then a yellow icon!</p>
         </div>
-        <button class="btn sound" data-play-btn>Play game</button>
+        <button class="btn" data-play-btn>Play game</button>
       </section>
 
       <!-- Scores modal -->
@@ -93,7 +93,7 @@
             <span class="computer-game-score" data-computer-wins>0</span>
           </div>
         </div>
-        <button class="btn sound" data-play-btn>Continue</button>
+        <button class="btn" data-play-btn>Continue</button>
       </section>
       <div class="overlay open" data-overlay></div>
     </main>
